--- a/FE_Creaciones_FayFa/src/styles/home.css
+++ b/FE_Creaciones_FayFa/src/styles/home.css
@@ -1,7 +1,12 @@
 .footer{
-    margin-top: 300px;
+    margin-top: 100px;
 }
-
+.contPrincipal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .carousel-item img {
     height: 500px;
     object-fit: cover;
@@ -16,7 +21,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 80%;
 }
+/* sobre salir */
 .contSobresalir{
     display: flex;
     flex-direction: row;
