--- a/FE_Creaciones_FayFa/src/styles/HeaderPage.css
+++ b/FE_Creaciones_FayFa/src/styles/HeaderPage.css
@@ -6,7 +6,7 @@
   .navbar {
       background-color: #000000; /* Fondo negro */
       padding: 20px 0;
-      position: fixed;
+      /* position: fixed; */
       top: 0;
       width: 100%;
       height: 110px;
