avance de conexion

--- a/FE_Creaciones_FayFa/src/styles/FormLogin.css
+++ b/FE_Creaciones_FayFa/src/styles/FormLogin.css
@@ -17,6 +17,10 @@
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
+#formA{
+    margin-left: 400px;
+}
+
 .formLog-title {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -69,4 +73,9 @@
 
 .signup-link a {
     text-decoration: underline;
+}
+
+#checkAdmin{
+    justify-content: center;
+    display: grid;
 }
